# fabric-kg-builder

./: .env.example  .gitattributes  .gitignore  README.md  fabric-kg.yaml  pyproject.toml
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  pages.yml
.squad/: decisions-old.md  decisions.md  routing.md  team.md
.squad/casting/: registry.json
.squad/identity/: wisdom.md
.squad/log/: 2026-06-24T11-24-16-618Z-prd-and-specs.md  2026-06-24T20-49-56Z-spec-and-plan.md  2026-06-24T22-58-35Z-demo-provisioning.md  2026-06-25T034907Z-sprint-build.md  2026-06-25T04-56-14Z-tables-and-hardening.md
.squad/orchestration-log/: 2026-06-24T11-24-16-618Z-fenster.md  2026-06-24T11-24-16-618Z-hockney.md  2026-06-24T11-24-16-618Z-keyser.md  2026-06-24T11-24-16-618Z-mcmanus.md  2026-06-24T11-24-16-618Z-verbal.md  2026-06-24T20-49-56Z-spec-and-plan-session.md  2026-06-24T22-58-35Z-provisioning.md  2026-06-25T034907Z-sprint-build.md  2026-06-25T04-56-14Z-tables-and-hardening.md
docs/: PLAN-001-implementation-plan.md  PRD.md  REQUIREMENTS-001-cli-prerequisites.md  TEST-STRATEGY.md  data-agent-grounding.md  fabric-kb-builder-decision-snapshot.md  fabric-kb-builder-implementation-backlog.md  fabric-kb-builder-lessons-learned.md  fabric-kb-builder-target-architecture.md  foundry-hybrid-agent-prompt.md
docs/design/: DESIGN-001-retrieval-agent-orchestration.md
docs/infra/: INFRA-001-azure-resources.md
docs/research/: RESEARCH-001-kg-aisearch-grounding.md
docs/specs/: SPEC-001-architecture-and-cli.md  SPEC-002-canonical-data-model.md  SPEC-003-ontology-and-deployment.md  SPEC-004-llm-enrichment.md  SPEC-005-validation-and-test-plan.md
examples/csv/: sample.csv
ontology/: ids.lock.json  model.yaml
ontology/environments/: dev.json.example  prod.json.example  test.json.example
plugins/fabric-kg/: README.md  plugin.json
sample_data/: surface_questions.txt
sample_data/Surface_Troubleshootings/: README.md
scripts/: README.md  reproduce-surface-kg.ps1  reproduce-surface-kg.sh
site/: README.md  app.js  index.html  styles.css
src/fabric_kg_builder/: __init__.py
tests/: conftest.py
tests/integration/: test_e2e_trace.py
tests/unit/: test_additivity_guard.py  test_agent_instructions.py  test_blob_uploader.py  test_bridge_validation.py  test_cli_smoke.py  test_compiler.py  (+41 more)
(+87 files in other folders)
